--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ actix = "0.10.0"
 actix-web-actors = "3.0.0"
 futures = "0.3.14"
 futures-util = "0.3.14"
+log = "0.4.14"
+env_logger = "0.8.3"
+tokio = { version = "1.4.0", features = ["full"] }
 
 [lib]
 name = "tzc"
