--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ futures-util = "0.3.14"
 log = "0.4.14"
 env_logger = "0.8.3"
 tokio = { version = "1.4.0", features = ["full"] }
+oauth2 = { version = "3.0.0", features = ["futures-03", "reqwest-010"], default-features = false }
 
 [lib]
 name = "tzc"
