--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,9 @@ ed25519-dalek = { version = "1.0.1", features = ["default", "serde"] }
 rand = "0.7"
 ring = { version = "0.16.20", features = ["alloc", "dev_urandom_fallback", "std"] }
 blake3 = "0.3.7"
+serde = "1.0.125"
+bincode = "1.3.3"
+actix-files = "0.5.0"
 
 [lib]
 name = "tzc"
