--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ serde = "1.0.125"
 bincode = "1.3.3"
 actix-files = "0.5.0"
 base64 = "0.13.0"
-reqwest = { version = "0.11", features = ["json"] }
+awc = { version = "2.0.3", features = ["default", "rustls"] }
 
 [lib]
 name = "tzc"
