--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Dowland Aiello <dowlandaiello@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-actix-web = "3.3.2"
+actix-web = { version = "3.3.2", features = ["default", "rustls", "secure-cookies"] }
 actix = "0.10.0"
 actix-web-actors = "3.0.0"
 futures = "0.3.14"
@@ -23,6 +23,7 @@ bincode = "1.3.3"
 actix-files = "0.5.0"
 base64 = "0.13.0"
 awc = { version = "2.0.3", features = ["default", "rustls"] }
+rustls = "0.18.1"
 
 [lib]
 name = "tzc"
