deploy: Edit dep script.
Signed-off-by: Dowland Aiello <dowlandaiello@gmail.com>

--- a/.github/workflows/deploy-homelab.yml
+++ b/.github/workflows/deploy-homelab.yml
@@ -7,20 +7,7 @@ jobs:
       - run: "checking out GitHub repo..."
       - run: cd tzchat || (git clone git@github.com:dowlandaiello/tzchat && cd tzchat)
       - run: "checking systemd configuration..."
-      - run: >
-        stat $HOME/.local/share/systemd/user/tzchat.service || echo "[Unit]
-        Description=The tzchat server
-        After=network-online.target
-
-        [Install]
-        WantedBy=multi-user.target
-
-        [Service]
-        User=$(whoami)
-        Type=simple
-        WorkingDirectory=$(pwd)
-        ExecStart=$HOME/.cargo/bin/cargo start
-        " > $HOME/.local/share/systemd/user/tzchat.service
+      - run: stat $HOME/.local/share/systemd/user/tzchat.service || ./create_systemd.sh > $HOME/.local/share/systemd/user/tzchat.service
       - run: "building and starting actix server..."
       - run: cargo build
       - run: "spawning actix server..."
