--- a/.github/workflows/deploy-homelab.yml
+++ b/.github/workflows/deploy-homelab.yml
@@ -8,7 +8,7 @@ jobs:
       - run: cd tzchat || (git clone git@github.com:dowlandaiello/tzchat && cd tzchat)
       - run: cd tzchat
       - run: echo "checking systemd configuration..."
-      - run: ls -la tzchat
+      - run: ls -la tzchat && pwd
       - run: stat $HOME/.local/share/systemd/user/tzchat.service || ./create_systemd.sh > $HOME/.local/share/systemd/user/tzchat.service
       - run: echo "building and starting actix server..."
       - run: cargo build
