--- a/.github/workflows/deploy-homelab.yml
+++ b/.github/workflows/deploy-homelab.yml
@@ -5,6 +5,7 @@ jobs:
     runs-on: [self-hosted, linux, x64]
     steps:
       - run: echo "checking out GitHub repo..."
+      - run: stat tzchat
       - run: cd tzchat || (git clone git@github.com:dowlandaiello/tzchat && cd tzchat)
       - run: cd tzchat/tzchat
       - run: echo "checking systemd configuration..."
