--- a/.github/workflows/deploy-homelab.yml
+++ b/.github/workflows/deploy-homelab.yml
@@ -7,7 +7,7 @@ jobs:
       - name: Check out repo
         run: stat repo || git clone git@github.com:dowlandaiello/tzchat repo
       - name: Check systemd configuration
-        run: stat $HOME/.local/share/systemd/user/tzchat.service || repo/create_systemd.sh > $HOME/.local/share/systemd/user/tzchat.service
+        run: stat $HOME/.local/share/systemd/user/tzchat.service || repo/.create_systemd.sh > $HOME/.local/share/systemd/user/tzchat.service
       - name: Build and start actix server
         run: |
           cd repo
