--- a/.github/workflows/deploy-homelab.yml
+++ b/.github/workflows/deploy-homelab.yml
@@ -7,7 +7,7 @@ jobs:
       - name: Check out repo
         run: stat repo || git clone git@github.com:dowlandaiello/tzchat repo
       - name: Check systemd configuration
-        run: stat $HOME/.local/share/systemd/user/tzchat.service || (pushd repo && repo/.create_systemd.sh > $HOME/.local/share/systemd/user/tzchat.service && popd)
+        run: stat $HOME/.local/share/systemd/user/tzchat.service || (pushd repo && ./.create_systemd.sh > $HOME/.local/share/systemd/user/tzchat.service && popd)
       - name: Build and start actix server
         run: |
           cd repo
