--- a/.github/workflows/deploy-homelab.yml
+++ b/.github/workflows/deploy-homelab.yml
@@ -12,4 +12,4 @@ jobs:
         run: |
           cd repo
           $HOME/.cargo/bin/cargo check
-          systemctl --user restart tzhschat
+          systemctl --user restart tzchat
