--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ rand = "0.7"
 ring = { version = "0.16.20", features = ["alloc", "dev_urandom_fallback", "std"] }
 blake3 = "0.3.7"
 serde = "1.0.125"
+serde_json = "1.0"
 bincode = "1.3.3"
 actix-files = "0.5.0"
 base64 = "0.13.0"
